EPMRPP-84600 || fix white space before border attr (#3513)

--- a/app/src/componentLibrary/attributeList/editableAttribute/attribute/attribute.scss
+++ b/app/src/componentLibrary/attributeList/editableAttribute/attribute/attribute.scss
@@ -109,7 +109,7 @@
     @include disabled-state($COLOR--e-300, $COLOR--e-100);
 
     &:focus-visible:not(:hover) {
-      @include draw-attribute-border(calc(99% - 2px), 85%);
+      @include draw-attribute-border(calc(100% - 2px), 85%);
     }
   }
   &.label {
